# docker-incident-controller

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py
agent/api/: __init__.py  main.py
agent/core/: __init__.py  logs.py  metrics.py  service.py  worker.py
agent/detector/: __init__.py  rules.py
agent/executor/: __init__.py  runner.py
agent/models/: __init__.py  incident.py  plan.py  state_machine.py
agent/observer/: __init__.py  docker_socket.py  health.py  observer.py
agent/pipeline/: __init__.py  orchestrator.py
agent/planner/: __init__.py  protocol.py  registry.py  rules.py
agent/planner/strategies/: app_crash.py  nginx.py  retry_aware.py
agent/storage/: __init__.py  sqlite_store.py
agent/tools/: __init__.py  allowlist.py  remediation.py
fault_injection/: break_nginx_config.ps1  break_nginx_config.sh  enable_app_crash.ps1  enable_app_crash.sh
services/: __init__.py
services/app/: Dockerfile  __init__.py  main.py
services/app/runtime/: flags.json
services/nginx/: site.conf
tests/integration/: test_boundary_guard.py  test_nginx_self_heal.py
tests/unit/: test_api.py  test_atomic_pipeline.py  test_detector.py  test_docker_client_factory.py  test_executor.py  test_improvements.py  test_model_serialization.py  test_observer.py  test_phase_b_assets.py  test_planner.py  test_remediation_boundary.py  test_sandbox_app.py  test_state_machine.py  test_store.py  test_worker.py
